deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanyard
  namespace: lanyard
spec:
  type: ClusterIP
  selector:
    app: lanyard
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
